Refactored the About Our Team grid - Using paragraph tags instead of spans - Putting padding on the parent element instead of margins on the children - Using dash styles specific to this section instead of sharing styles with the other dashes on the page - Removed the fixed height on the person's title to allow line wraping - Fine tuned the spacing

--- a/site/src/styles/about/about/_text-block.scss
+++ b/site/src/styles/about/about/_text-block.scss
@@ -9,6 +9,11 @@
 .about-text-flex-column {
   display: flex;
   flex-direction: column;
+  padding: 0 14%;
+
+  @media (max-width: $about-single-column-break) {
+    padding: 0 2%;
+  }
 }
 
 .about-text-1 {
